# bit-tieba

./: .env.development  .env.production  .gitignore  README_TEST.md  RequirementsAnalysis.md  TEST_INSTRUCTIONS.md  TIEBA_COMPLETION_SUMMARY.md  TIEBA_TEST_GUIDE.md  env.d.ts  index.html  package-lock.json  package.json  quick_test.py  tieba_test.py  vite.config.ts
client/: README.md  env.d.ts  package-lock.json  package.json
client/src/: App.vue  types.ts
client/src/components/: FollowedPosts.vue  ReplyItem.vue  SideBar.vue
client/src/router/: index.ts
client/src/utils/: format.ts
client/src/views/: HomeView.vue  MessagesView.vue  PostView.vue
server/: BACKEND_INTEGRATION.md  CMakeLists.txt  DEPLOYMENT_GUIDE.md  QUICK_START_GUIDE.md  README.md  TIEBA_FEATURE_SUMMARY.md  TIEBA_IMPLEMENTATION_GUIDE.md  TIEBA_TESTING_GUIDE.md
server/ChatServer/: CMakeLists.txt  CServer.cpp  CSession.cpp  ChatGrpcClient.h  ChatServiceImpl.cpp  DistLock.cpp  LogicSystem.cpp  LogicSystem.h  MsgNode.cpp  MysqlDao.h  RedisMgr.h  StatusGrpcClient.h  TiebaDao.cpp  TiebaDao.h  chatserver1  config.ini  const.h  data.h  message.pb.cc  message.pb.h
server/ChatServer2/: AsioIOServicePool.h  CMakeLists.txt  CServer.cpp  CServer.h  CSession.cpp  CSession.h  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServiceImpl.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  TiebaDao.cpp  UserMgr.cpp  chatserver2  config.ini  const.h  data.h  message.pb.cc  message.pb.h  message.proto
server/GateServer/: CMakeLists.txt  CServer.cpp  HttpConnection.cpp  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  RedisMgr.cpp  StatusGrpcClient.h  VerifyGrpcClient.h  config.ini  const.h  data.h  gateserver  message.pb.cc  message.pb.h  message.proto
server/StatusServer/: AsioIOServicePool.h  CMakeLists.txt  ChatGrpcClient.h  MysqlDao.cpp  MysqlDao.h  RedisMgr.cpp  RedisMgr.h  StatusServiceImpl.cpp  config.ini  const.h  message.pb.cc  message.pb.h  statusserver
server/VarifyServer/: config.json  package-lock.json  server.js
server/sql/: tieba_tables.sql
src/: App.vue  main.ts  types.ts
src/api/: authApi.ts  forumApi.ts
src/assets/: base.css  main.css
src/components/: FloatingButton.vue  HotForums.vue  HotPosts.vue  PostDialog.vue  ReplyItem.vue  ReplyModal.vue  SearchBar.vue
src/constants/: forum.ts
src/router/: index.ts
src/stores/: authStore.ts  postStore.ts  user.ts
src/views/: ForumsView.vue  HomeView.vue  LoginView.vue  MeView.vue  MessagesView.vue  PostView.vue  RegisterView.vue  ResetPasswordView.vue  SettingsView.vue  SingleForumView.vue
